# interpretable-stylometry

./: .gitignore  README.md  pyproject.toml
notebooks/: constituency_analysis.ipynb  exploratory_analysis.ipynb  feng_algorithm_dev.ipynb  ghostbuster_exploratory_analysis.ipynb  ghostbuster_parse_test.ipynb
results/: ghostbuster_sentence_stats.csv  ghostbuster_word_count_stats.csv  stylometric_report.txt
scripts/: benchmark_constituency_parse.py  benchmark_parse.py
src/analysis/: analyze_corpus.py  feng_classifiers.py  mining.py  run_feature_analysis.py
src/parsing/: constituency_parse.py  constituency_parse_clean.py  dependency_parse.py  fix_author_reuters.py
