[project]
name = "interpretable-stylometry"
version = "0.1.0"
description = "Syntactic, lexical, and prosodic feature extraction for interpretable stylometric analysis of human and AI-generated prose"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kazik Sobotnicki" }
]

dependencies = [
    "spacy>=3.8.14",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "pyarrow>=24.0.0",
    "click>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
