[project]
name = "interpretable-stylometry"
version = "0.1.0"
description = "Syntactic, lexical, and prosodic feature extraction for interpretable stylometric analysis of human and AI-generated prose"
readme = "README.md"
requires-python = ">=3.12, <3.13"
authors = [
    { name = "Kazik Sobotnicki" }
]

dependencies = [
    "spacy>=3.8.14",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "pyarrow>=24.0.0",
    "click>=8.4.1",
    "benepar>=0.2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "cupy-cuda13x>=13.6.0",
    "transformers==4.35.2",
    "nltk>=3.9.4",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu132"

[tool.ruff.lint]
select = ["E", "F", "I"]
# Disable fix for unused imports (`F401`).
unfixable = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
